--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,2 +1,147 @@
 @import './_reset';
 @import './_variables';
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: Helvetica, "PingFang SC", "Microsoft Yahei", sans-serif;
+}
+
+main {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient($primary-color, $secondary-color);
+}
+
+.container {
+  width: 60%;
+  max-width: 800px;
+  border-radius: 2rem;
+  padding: 1.5rem 1.2rem 1.7rem;
+  background-color: $white-color;
+  box-shadow: 4px 4px .5rem #0007;
+}
+
+h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin: 1.5rem 0;
+}
+
+// 輸入框
+.todo-add {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+
+  input {
+    width: 100%; 
+    padding: 1rem 1.5rem;
+    border-radius: 1rem;
+    font-size: 1rem;
+    color: $black-color;
+  }
+
+  button {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0;
+    background-color: transparent;
+    color: $gray-color;
+    border: none;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    font-weight: bold;
+    font-size: 1rem;
+    transition: .5s linear;
+    cursor: pointer;
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
+}
+
+// 篩選
+.filters {
+  display: flex;
+  align-items: center;
+  margin: 1.5rem .5rem;
+  color: $gray-color;
+  font-size: .8rem;
+
+  .filter {
+    margin-right: .8rem;
+    transition: .8s;
+    cursor: pointer;
+
+    &.active {
+      color: $primary-color;
+      transform: scale(1.2);
+    }
+  }
+}
+
+// todo 列表
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: .8rem;
+
+  .todo-item {
+    background-color: $white-color;
+    padding: 1rem;
+    border-radius: .5rem;
+    color: $black-color;
+    position: relative;
+    display: flex;
+    box-shadow: 2px 2px .3rem #0007;
+    cursor: pointer;
+
+    &.done {
+      text-decoration: line-through;
+      font-style: italic;
+      color: $gray-color;
+    }
+
+    input {
+      margin-right: 1rem;
+      visibility: hidden;
+
+      &:checked + span.check-button::after {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.check-button {
+  position: absolute;
+  top: 1rem;
+
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50%;
+    transition: .3s;
+  }
+
+  &::before {
+    border: 2px solid $primary-color;
+  }
+
+  &::after {
+    background-color: $primary-color;
+    opacity: 0;
+  }
+}
