feat: connect API

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,11 @@
 $primary-color: #1BB0F4;
 $secondary-color: #1A8ED1;
 $danger-color: #e23b3b;
+$success-color: #8fc325;
 
 $gray-color: #c0c2ce;
+$gray-dark-color: #aaa;
+$gray-light-color: #f4f4f4;
+
 $black-color: #000;
 $white-color: #fff;
