--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@
 main {
   width: 100%;
   min-height: 100vh;
+  padding: 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,7 +28,7 @@ main {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: clamp(2rem, 5vw, 3rem);
   text-align: center;
   margin: 1.5rem 0;
 }
@@ -101,7 +102,6 @@ h1 {
     color: $black-color;
     display: flex;
     align-items: center;
-    gap: 1rem;
     box-shadow: 2px 2px .3rem #0007;
     word-break: break-all;
     cursor: pointer;
@@ -144,6 +144,7 @@ h1 {
       border: none;
       outline: none;
       border-bottom: 1px solid $black-color;
+      width: 100%;
     }
 
     i {
@@ -173,6 +174,7 @@ h1 {
 .check-button {
   width: 1.2rem;
   height: 1.2rem;
+  margin-right: 1rem;
 
   &::before,
   &::after {
@@ -197,4 +199,88 @@ h1 {
 
 .nothing {
   text-align: center;
+}
+
+// 供餐時間
+.mealtime {
+  display: flex;
+  align-items: center;
+  padding: 36px 0;
+}
+
+.check-block {
+  display: flex;
+  align-items: center;
+  background-color: $gray-dark-color;
+  border-radius: 1rem;
+  height: 1.5rem;
+  width: 50px;
+  height: 22px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  input[type="checkbox"] {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
+  i {
+    position: absolute;
+    font-size: 20px;
+    color: $white-color;
+    opacity: 0;
+
+    &.cancel {
+      opacity: 1;
+      left: 1px;
+    }
+
+    &.check {
+      opacity: 1;
+      right: 1px;
+    }
+  }
+}
+
+.select-block {
+  position: relative;
+  height: 40px;
+  width: 190px;
+  cursor: pointer;
+
+  &::after {
+    content: '';
+    border: 6px solid transparent;
+    border-color: $gray-dark-color transparent transparent transparent;
+    position: absolute;
+    right: .5rem;
+    top: 18px;
+    pointer-events: none;
+  }
+  
+  select {  
+    cursor: pointer;
+    border-radius: .5rem;
+    outline: none;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem 1rem;
+
+    // option {
+    //   display: block;
+    //   padding: .5rem 1rem;
+
+    //   &:hover{
+    //     background-color: gray;
+
+    //     &:disabled {
+    //       background-color: transparent;
+    //       cursor: not-allowed
+    //     }
+    //   }
+    // }
+  }  
 }
