feat: meal time

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #1BB0F4;
 $secondary-color: #1A8ED1;
+$secondary-light-color:#00a2ff;
+$secondary-dark-color: #167ab3;
 $danger-color: #e23b3b;
 $success-color: #8fc325;
 
