--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,22 +5,58 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  
+}
+
+body {
   font-family: Helvetica, "PingFang SC", "Microsoft Yahei", sans-serif;
+  background-image: linear-gradient($primary-color, $secondary-color);
+}
+
+header {
+  width: 100%;
+  height: 4rem;
+  background-color: $white-color;
+  border-bottom-left-radius: .5rem;
+  border-bottom-right-radius: .5rem;
+  padding: 0 2rem;
+
+  nav {
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    a {
+      text-decoration: none;
+      color: $secondary-dark-color;
+      font-weight: bold;
+      font-size: 24px;
+      cursor: pointer;
+
+      &.active,
+      &:hover {
+        color: $secondary-light-color;
+      }
+    }
+
+    a + a {
+      margin-left: 1rem;
+    }
+  }
 }
 
 main {
   width: 100%;
-  min-height: 100vh;
+  min-height: calc(100vh - 4rem);
   padding: 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient($primary-color, $secondary-color);
 }
 
 .container {
-  width: 60%;
-  max-width: 800px;
+  width: 720px;
+  // max-width: 800px;
   border-radius: 2rem;
   padding: 1.5rem 1.2rem 1.7rem;
   background-color: $white-color;
@@ -205,49 +241,77 @@ h1 {
 .mealtime {
   display: flex;
   align-items: center;
+  height: 40px;
   padding: 36px 0;
+
+  p {
+    margin-right: clamp(.5rem, 3vw, 4.5rem);
+  }
+  
+  span {
+    margin: 0 .5rem;
+  }
 }
 
-.check-block {
+// switch
+input[type="checkbox"].toggle {
+  opacity: 0;
+  position: absolute;
+  left: -9000px;
+
+  & + label {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 44px;
+    height: 1.5rem;
+    border-radius: 1rem;
+    background-color: $gray-dark-color;
+    transition: background-color .2s ease-in-out;
+    margin-right: clamp(.5rem, 2vw, 1rem);
+    margin-left: clamp(.5rem, 2vw, 2.25rem);
+    cursor: pointer;
+  }
+
+  &:checked + label {
+    background-color: $success-color;
+  }
+
+  & + label::before {
+    content: '\2715';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: .1rem;
+    width: 20px;
+    height: 20px;
+    font-weight: bold;
+    background-color: $white-color;
+    border-radius: 1em;
+    margin-right: 0.25rem;
+    position: absolute;
+    transition: transform .2s ease-in-out;
+    color: $gray-dark-color;
+  }
+
+  &:checked + label::before {
+    content: '\2713';
+    color: $success-color;
+    transform: translateX(100%);
+  }
+}
+
+.time {
   display: flex;
   align-items: center;
-  background-color: $gray-dark-color;
-  border-radius: 1rem;
-  height: 1.5rem;
-  width: 50px;
-  height: 22px;
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-
-  input[type="checkbox"] {
-    display: none;
-    width: 0;
-    height: 0;
-  }
-
-  i {
-    position: absolute;
-    font-size: 20px;
-    color: $white-color;
-    opacity: 0;
-
-    &.cancel {
-      opacity: 1;
-      left: 1px;
-    }
-
-    &.check {
-      opacity: 1;
-      right: 1px;
-    }
-  }
 }
+
 
 .select-block {
   position: relative;
+  display: flex;
   height: 40px;
-  width: 190px;
+  width: clamp(80px, 20vw, 190px);
   cursor: pointer;
 
   &::after {
@@ -266,7 +330,6 @@ h1 {
     outline: none;
     appearance: none;
     width: 100%;
-    height: 100%;
     padding: 0.5rem 1rem;
 
     // option {
@@ -274,13 +337,54 @@ h1 {
     //   padding: .5rem 1rem;
 
     //   &:hover{
-    //     background-color: gray;
+    //     background-color: $gray-dark-color;
+    //     color: $white-color;
 
     //     &:disabled {
-    //       background-color: transparent;
+    //       background-color: $gray-dark-color;
+    //       color: $white-color;
     //       cursor: not-allowed
     //     }
     //   }
     // }
   }  
+}
+
+.formatted-data {
+  background-color: $gray-light-color;
+  padding: 10px;
+  border: 1px solid $gray-color;
+
+  pre {
+    white-space: pre-wrap; /* 保留空格和换行 */
+    font-family: monospace; /* 使用等宽字体，提高可读性 */
+  }
+}
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: #0005;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .loading {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 5px solid $white-color;
+    border-left: 5px solid transparent;
+    animation: rotate 1s linear infinite;
+  }
+}
+
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
